--- a/app/src/main/res/layout/subscription_fragment.xml
+++ b/app/src/main/res/layout/subscription_fragment.xml
@@ -59,6 +59,7 @@
                 <TextView
                     android:id="@+id/textView_subscription_actual"
                     style="@style/OptionValue"
+                    android:singleLine="false"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/textView_subscription_actual_title"
