--- a/app/src/main/res/menu/main_chat_menu.xml
+++ b/app/src/main/res/menu/main_chat_menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
+    <!--TODO:Subscription-->
+    <!--<item
         android:id="@+id/suscription"
         android:title="@null"
-        app:actionLayout="@layout/drawer_menu_item_subscription" />
+        app:actionLayout="@layout/drawer_menu_item_subscription" />-->
 
     <item
         android:id="@+id/security_settings"
