--- a/app/src/main/res/layout/drawer_menu_item_notification.xml
+++ b/app/src/main/res/layout/drawer_menu_item_notification.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_weight="1"
-        android:text="Notifications"
+        android:text="@string/text_notifications"
         android:textColor="?attr/attrIconAndTextColorDrawer" />
 
 </LinearLayout>
