--- a/app/src/main/res/layout/contact_profile_fragment.xml
+++ b/app/src/main/res/layout/contact_profile_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.contactProfile.ContactProfileFragment">
 
     <data>
 
@@ -14,8 +15,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.contactProfile.ContactProfileFragment">
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -205,7 +205,53 @@
                     android:layout_height="match_parent"
                     android:background="?attr/attrBackgroundSectionColor"
                     android:padding="@dimen/small_padding"
-                    android:text="@string/text_conversation"/>
+                    android:text="@string/text_conversation" />
+
+                <LinearLayout
+                    android:id="@+id/option_custom_notification"
+                    style="@style/Option"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView_custom_notification_start_icon"
+                        style="@style/OptionStartIcon"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_notifications_icon" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/normal_margin"
+                        android:layout_marginEnd="@dimen/normal_margin"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView_custom_notification"
+                            style="@style/OptionTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="0dp"
+                            android:text="Personalizar notificaciones|!!" />
+
+                        <TextView
+                            android:id="@+id/editText_custom_notification"
+                            style="@style/SmallBodyTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:maxLength="@integer/max_length_nickname"
+                            android:text="activado|!!"
+                            android:padding="0dp"
+                            android:singleLine="true"
+                            android:textColor="?attr/attrColorButtonTint"
+                            tools:text="Activado" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/option_silence_conversation"
@@ -217,17 +263,18 @@
                     <ImageView
                         android:id="@+id/imageView_silence_conversation_start_icon"
                         style="@style/OptionStartIcon"
+                        android:layout_gravity="center"
                         app:srcCompat="@drawable/ic_volume_off_black" />
 
                     <TextView
                         android:id="@+id/textView_label_silence_conversation"
                         style="@style/OptionTitle"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/text_mute_conversation" />
 
-                    <Switch
+                    <com.google.android.material.switchmaterial.SwitchMaterial
                         android:id="@+id/switch_silence_conversation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
